Fix header alignment

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -9,6 +9,7 @@
   transition: all 0.4s ease;
   font-size: 36px;
   z-index: 10;
+  left: 0;
 }
 
 .header-container.small{
